--- a/scss/end.scss
+++ b/scss/end.scss
@@ -641,6 +641,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 15px;
   }
   .videosTest iframe {
     max-width: 360px;
